--- a/index.html
+++ b/index.html
@@ -89,10 +89,41 @@
                 <p class="font__400-18 color__black">Whether you want to get organized, keep your personal life on track, or boost workplace productivity, Evernote has the right plan for you.</p>
                 <img class="position__absolute-2 section-fourth__Choose-Your-Plan--highlight-image" src="./assets/images/section-fourth__Choose-Your-Plan--highlight-image.png" />
             </div>
-            <div class="section-fourth__Choose-Your-Plan--container">
+            <div class="section-fourth__Choose-Your-Plan--Free-Personal-Organization">
+                <div class="section-fourth__Choose-Your-Plan--Free">
+                    <p class="font__600-24 color__black margin__25">Free</p>
+                    <p class="font__700-36 color__black margin__25">$0</p>
+                    <p class="font__500-18 color__black margin__25">Capture ideas and find them quickly</p>
+                    <p class="font__400-16 color__black margin__28"><img class="circle-check-Free" src="./assets/images/circle-check-Free.png" />Sync unlimited devices</p>
+                    <p class="font__400-16 color__black margin__28"><img class="circle-check-Free" src="./assets/images/circle-check-Free.png" />10 GB monthly uploads</p>
+                    <p class="font__400-16 color__black margin__28"><img class="circle-check-Free" src="./assets/images/circle-check-Free.png" />200 MB max. note size</p>
+                    <p class="font__400-16 color__black margin__28"><img class="circle-check-Free" src="./assets/images/circle-check-Free.png" />Customize Home dashboard and access extra widgets</p>
+                    <p class="font__400-16 color__black margin__28"><img class="circle-check-Free" src="./assets/images/circle-check-Free.png" />Connect primary Google Calendar account</p>
+                    <p class="font__400-16 color__black margin__25"><img class="circle-check-Free" src="./assets/images/circle-check-Free.png" />Add due dates, reminders, and notifications to your tasks</p>
+                </div class="section-fourth__Choose-Your-Plan--Personal">
+                    <p></p>
+                    <p></p>
+                    <p></p>
+                    <p></p>
+                    <p></p>
+                    <p></p>
+                    <p></p>
+                    <p></p>
+                    <p></p>
+                <div class="section-fourth__Choose-Your-Plan--Organization">
+                    <p></p>
+                    <p></p>
+                    <p></p>
+                    <p></p>
+                    <p></p>
+                    <p></p>
+                    <p></p>
+                    <p></p>
+                    <p></p>
+                </div>
+                <div>
 
-
-
+                </div>
             </div>
         </div>
     </section>
