--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   </head>
 
   <body>
-    <header class="header container" id="header">
+    <!-- HEADER -->
+    <header class="header" id="header">
       <nav class="nav__container">
         <a href="#" class="nav__logo">
           <img src="./acssets/img/img_logo.png" alt="logo" />
@@ -66,58 +67,242 @@
     </section>
 
     <!-- SECTION 2 -->
-    <section id="section2" class="section2__container container">
-      <!-- SECTION 2 TOP -->
+    <!-- SECTION 2 TOP -->
+    <section class="section2__container container" id="section2">
       <div class="section2__top">
         <div class="section2__data">
-          <div class="section2__content-project">
-            <h3 class="section2__title title">Project Management</h3>
-            <img src="./acssets/img/img_section2_element_project.png" alt="" />
-          </div>
+          <h3 class="section2__title title">
+            Project Management
+            <img
+              src="./acssets/img/img_section2_element_project.png"
+              alt="#"
+              class="section2__top-img--title"
+            />
+          </h3>
           <p class="section2__content content">
-            Images, videos, PDFs and audio files are supported. Create math
-            expression and diagrams directly from the app. Take photos with me
-            mobile app and save them to a note.
+            Image, videos, PDFs and audio files are supported. Create math
+            expressions and diagrams directly from the app. Take photos with the
+            mobile app and save them to note.
           </p>
-          <a href="#" class="section2__button button">
-            Get Started
+          <a href="#" class="section2__button button"
+            >Get Started
             <i class="fa-solid fa-arrow-right"></i>
           </a>
-          <div style="section2__top-img--left">
-            <img
-              src="./acssets/img/img_section2_background_project.png"
-              alt="left side project management"
-            />
-          </div>
+          <img
+            src="./acssets/img/img_section2_background_project.png"
+            alt=""
+            class="section2__top-img--left"
+          />
         </div>
-        <div class="section2__img">
-          <img src="./acssets/img/img_section2_image.png" alt="chèn ảnh vào" />
+
+        <div class="section2__top-img--right">
+          <img src="./acssets/img/img_section2_top_right.jpg" alt="#" />
+        </div>
+      </div>
+      <!-- SECTION 2 BOTTOM -->
+      <div class="section2__bottom">
+        <img
+          src="./acssets/img/img_section2_background_worktogether.png"
+          alt="#"
+          class="section2__bottom-img"
+        />
+        <div class="section2__data">
+          <h3 class="section2__title title">
+            Work together
+            <img
+              src="./acssets/img/img_secton2_element_worktogether.png"
+              alt="#"
+              class="section2__bottom-img--title"
+            />
+          </h3>
+          <p class="section2__content content">
+            With whitepace, share your notes with your colleagues and
+            collaborate on them. You can also publish a note to the internet and
+            share the URL with other.
+          </p>
+          <a href="#" class="section2__button button"
+            >Try it now <i class="fa-solid fa-arrow-right"></i
+          ></a>
+        </div>
+      </div>
+    </section>
+
+    <!-- SECTION 3 USE AS EXTENSION -->
+    <section class="section3__container container" id="section3">
+      <div class="section3__data">
+        <h3 class="section3__title title">
+          Use as Extension
+          <img
+            src="./acssets/img/img_section3_element.png"
+            alt="#"
+            class="section3__img-title"
+          />
+        </h3>
+        <p class="section3__content content">
+          Use the web clipper extension, available on Chrome and Firefox, to
+          save web pages or take screenshots as notes.
+        </p>
+        <a href="#" class="section3__button button"
+          >Let's Go
+          <i class="fa-solid fa-arrow-right"></i>
+        </a>
+      </div>
+      <div class="section3__img">
+        <img src="./acssets/img/img_section3_img.jpg" alt="#" />
+      </div>
+    </section>
+
+    <!-- SECTION 4 CUSTOMISE IT TO YOUR NEEDS -->
+    <section class="section4__container container" id="container">
+      <div class="section4__top">
+        <div class="section4__top-img">
+          <img src="./acssets/img/img_section3_img.jpg" alt="#" />
+        </div>
+        <div class="section4__top-data">
+          <h3 class="section4__top-title title">
+            Customise it to your needs
+            <img
+              src="acssets/img/img_section4_top_element.png"
+              alt=""
+              class="section4__top-img-title"
+            />
+          </h3>
+          <p class="section4__content content">
+            Customise the app with plugins, custom themes and multiple text
+            editors (Rich Text or Markdown). Or create your own scripts and
+            plugins using the Extension API.
+          </p>
+          <a href="#" class="section4__top-button button">
+            Let's go
+            <i class="fa-solid fa-arrow-right"></i>
+          </a>
         </div>
       </div>
 
-      <!-- SECTION 2 BOTTOM -->
-      <div section2__bottom>
-        <div class="section2__content-work">
-          <h3 class="section2__title">Work together</h3>
-          <img
-            src="./acssets/img/img_secton2_element_worktogether.png"
-            alt=""
-          />
+      <div class="section4__bottom">
+        <div class="section4__bottom-data">
+          <h3 class="section4__bottom-title">
+            Choose Your Plan
+            <img
+              src="./acssets/img/img_section2_element_project.png"
+              alt="#"
+              class="section4__bottom-img-title"
+            />
+          </h3>
+          <p class="section4__content content">
+            Whether you want to get organized, keep your personal life on track,
+            or boost workplace productivity, Evernote has the right plan for
+            you.
+          </p>
         </div>
-        <p class="section2__content">
-          With whitepace, share your notes with your colleagues and collaborate
-          on them. You can also publish a note to the internet and share the ULR
-          with other.
-        </p>
-        <a href="#" class="section2__button button">
-          Try it now
-          <i class="fa-solid fa-arrow-right"></i>
-        </a>
-        <div class="section2__img">
-          <img
-            src="./acssets/img/img_section2_background_worktogether.png"
-            alt="xxx"
-          />
+        <div class="section4__card">
+          <!-- card item side right -->
+          <div class="section4__card-item--side">
+            <h4 class="section4__card-item--side--subtitle">Free</h4>
+            <h3 class="section4__card-item--side--title">$0</h3>
+            <p class="section4__card-item--side--content">
+              Capture ideas and find them quickly
+            </p>
+            <p class="section4__card-item--side--list">
+              <img src="./acssets/icon/icon_tick.png" alt="icon tick" />
+              Sync unlimited devices
+            </p>
+            <p class="section4__card-item--side--list">
+              <img src="./acssets/icon/icon_tick.png" alt="icon tick" />
+              10 GB monthly uploads
+            </p>
+            <p class="section4__card-item--side--list">
+              <img src="./acssets/icon/icon_tick.png" alt="icon tick" />
+              200 MB max. note size
+            </p>
+            <p class="section4__card-item--side--list">
+              <img src="./acssets/icon/icon_tick.png" alt="icon tick" />
+              Customize Home dashboard and access extra widgets
+            </p>
+            <p class="section4__card-item--side--list">
+              <img src="./acssets/icon/icon_tick.png" alt="icon tick" />
+              Connect primary Google Calendar account
+            </p>
+            <p class="section4__card-item--side--list">
+              <img src="./acssets/icon/icon_tick.png" alt="icon tick" />
+              Add due dates, reminders, and notifications to your tasks
+            </p>
+            <a href="#" class="section4__card-item--side--button"
+              >Get Started</a
+            >
+          </div>
+
+          <!-- card item middle -->
+          <div class="section4__card-item--middle">
+            <h4 class="section4__card-item--middle--subtitle">Personal</h4>
+            <h3 class="section4__card-item--middle--title">$11.99</h3>
+            <p class="section4__card-item--middle--content">
+              Keep home and family on track
+            </p>
+            <p class="section4__card-item--side--list">
+              <img src="./acssets/icon/icon_tick.png" alt="icon tick" />
+              Sync unlimited devices
+            </p>
+            <p class="section4__card-item--side--list">
+              <img src="./acssets/icon/icon_tick.png" alt="icon tick" />
+              10 GB monthly uploads
+            </p>
+            <p class="section4__card-item--side--list">
+              <img src="./acssets/icon/icon_tick.png" alt="icon tick" />
+              200 MB max. note size
+            </p>
+            <p class="section4__card-item--side--list">
+              <img src="./acssets/icon/icon_tick.png" alt="icon tick" />
+              Customize Home dashboard and access extra widgets
+            </p>
+            <p class="section4__card-item--side--list">
+              <img src="./acssets/icon/icon_tick.png" alt="icon tick" />
+              Connect primary Google Calendar account
+            </p>
+            <p class="section4__card-item--side--list">
+              <img src="./acssets/icon/icon_tick.png" alt="icon tick" />
+              Add due dates, reminders, and notifications to your tasks
+            </p>
+            <a href="#" class="section4__card-item--middle-- button"
+              >Get Started</a
+            >
+          </div>
+
+          <!-- card item side left -->
+          <div class="section4__card-item--side">
+            <h4 class="section4__card-item--side--subtitle">Free</h4>
+            <h3 class="section4__card-item--side-title">$0</h3>
+            <p class="section4__card-item--side--content">
+              Capture ideas and find them quickly
+            </p>
+            <p class="section4__card-item--side--list">
+              <img src="./acssets/icon/icon_tick.png" alt="icon tick" />
+              Sync unlimited devices
+            </p>
+            <p class="section4__card-item--side--list">
+              <img src="./acssets/icon/icon_tick.png" alt="icon tick" />
+              10 GB monthly uploads
+            </p>
+            <p class="section4__card-item--side--list">
+              <img src="./acssets/icon/icon_tick.png" alt="icon tick" />
+              200 MB max. note size
+            </p>
+            <p class="section4__card-item--side--list">
+              <img src="./acssets/icon/icon_tick.png" alt="icon tick" />
+              Customize Home dashboard and access extra widgets
+            </p>
+            <p class="section4__card-item--side--list">
+              <img src="./acssets/icon/icon_tick.png" alt="icon tick" />
+              Connect primary Google Calendar account
+            </p>
+            <p class="section4__card-item--side--list">
+              <img src="./acssets/icon/icon_tick.png" alt="icon tick" />
+              Add due dates, reminders, and notifications to your tasks
+            </p>
+            <a href="#" class="section4__card-item--side--button"
+              >Get Started</a
+            >
+          </div>
         </div>
       </div>
     </section>
