done section: 4,5 section6: 50%

--- a/index.html
+++ b/index.html
@@ -203,30 +203,27 @@
             <p class="section4__card-item--side--content">
               Capture ideas and find them quickly
             </p>
-            <p class="section4__card-item--side--list">
-              <img src="./acssets/icon/icon_tick.png" alt="icon tick" />
-              Sync unlimited devices
-            </p>
-            <p class="section4__card-item--side--list">
-              <img src="./acssets/icon/icon_tick.png" alt="icon tick" />
-              10 GB monthly uploads
-            </p>
-            <p class="section4__card-item--side--list">
-              <img src="./acssets/icon/icon_tick.png" alt="icon tick" />
-              200 MB max. note size
-            </p>
-            <p class="section4__card-item--side--list">
-              <img src="./acssets/icon/icon_tick.png" alt="icon tick" />
-              Customize Home dashboard and access extra widgets
-            </p>
-            <p class="section4__card-item--side--list">
-              <img src="./acssets/icon/icon_tick.png" alt="icon tick" />
-              Connect primary Google Calendar account
-            </p>
-            <p class="section4__card-item--side--list">
-              <img src="./acssets/icon/icon_tick.png" alt="icon tick" />
-              Add due dates, reminders, and notifications to your tasks
-            </p>
+
+            <ul>
+              <li class="section4__card-item--side--list">
+                Sync unlimited devices
+              </li>
+              <li class="section4__card-item--side--list">
+                10 GB monthly uploads
+              </li>
+              <li class="section4__card-item--side--list">
+                200 MB max. note size
+              </li>
+              <li class="section4__card-item--side--list">
+                Customize Home dashboard and access extra widgets
+              </li>
+              <li class="section4__card-item--side--list">
+                Connect primary Google Calendar account
+              </li>
+              <li class="section4__card-item--side--list">
+                Add due dates, reminders, and notifications to your tasks
+              </li>
+            </ul>
             <a href="#" class="section4__card-item--side--button"
               >Get Started</a
             >
@@ -239,70 +236,156 @@
             <p class="section4__card-item--middle--content">
               Keep home and family on track
             </p>
-            <p class="section4__card-item--side--list">
-              <img src="./acssets/icon/icon_tick.png" alt="icon tick" />
-              Sync unlimited devices
-            </p>
-            <p class="section4__card-item--side--list">
-              <img src="./acssets/icon/icon_tick.png" alt="icon tick" />
-              10 GB monthly uploads
-            </p>
-            <p class="section4__card-item--side--list">
-              <img src="./acssets/icon/icon_tick.png" alt="icon tick" />
-              200 MB max. note size
-            </p>
-            <p class="section4__card-item--side--list">
-              <img src="./acssets/icon/icon_tick.png" alt="icon tick" />
-              Customize Home dashboard and access extra widgets
-            </p>
-            <p class="section4__card-item--side--list">
-              <img src="./acssets/icon/icon_tick.png" alt="icon tick" />
-              Connect primary Google Calendar account
-            </p>
-            <p class="section4__card-item--side--list">
-              <img src="./acssets/icon/icon_tick.png" alt="icon tick" />
-              Add due dates, reminders, and notifications to your tasks
-            </p>
-            <a href="#" class="section4__card-item--middle-- button"
-              >Get Started</a
-            >
+
+            <ul>
+              <li class="section4__card-item--middle--list">
+                Sync unlimited devices
+              </li>
+              <li class="section4__card-item--middle--list">
+                10 GB monthly uploads
+              </li>
+              <li class="section4__card-item--middle--list">
+                200 MB max. note size
+              </li>
+              <li class="section4__card-item--middle--list">
+                Customize Home dashboard and access extra widgets
+              </li>
+              <li class="section4__card-item--middle--list">
+                Connect primary Google Calendar account
+              </li>
+              <li class="section4__card-item--middle--list">
+                Add due dates, reminders, and notifications to your tasks
+              </li>
+            </ul>
+            <a href="#" class="section4__card-item--middle--button button"
+              >Get Started
+            </a>
           </div>
 
           <!-- card item side left -->
           <div class="section4__card-item--side">
-            <h4 class="section4__card-item--side--subtitle">Free</h4>
-            <h3 class="section4__card-item--side-title">$0</h3>
+            <h4 class="section4__card-item--side--subtitle">Organization</h4>
+            <h3 class="section4__card-item--side--title">$49.99</h3>
             <p class="section4__card-item--side--content">
               Capture ideas and find them quickly
             </p>
-            <p class="section4__card-item--side--list">
-              <img src="./acssets/icon/icon_tick.png" alt="icon tick" />
-              Sync unlimited devices
-            </p>
-            <p class="section4__card-item--side--list">
-              <img src="./acssets/icon/icon_tick.png" alt="icon tick" />
-              10 GB monthly uploads
-            </p>
-            <p class="section4__card-item--side--list">
-              <img src="./acssets/icon/icon_tick.png" alt="icon tick" />
-              200 MB max. note size
-            </p>
-            <p class="section4__card-item--side--list">
-              <img src="./acssets/icon/icon_tick.png" alt="icon tick" />
-              Customize Home dashboard and access extra widgets
-            </p>
-            <p class="section4__card-item--side--list">
-              <img src="./acssets/icon/icon_tick.png" alt="icon tick" />
-              Connect primary Google Calendar account
-            </p>
-            <p class="section4__card-item--side--list">
-              <img src="./acssets/icon/icon_tick.png" alt="icon tick" />
-              Add due dates, reminders, and notifications to your tasks
-            </p>
+
+            <ul>
+              <li class="section4__card-item--side--list">
+                Sync unlimited devices
+              </li>
+              <li class="section4__card-item--side--list">
+                10 GB monthly uploads
+              </li>
+              <li class="section4__card-item--side--list">
+                200 MB max. note size
+              </li>
+              <li class="section4__card-item--side--list">
+                Customize Home dashboard and access extra widgets
+              </li>
+              <li class="section4__card-item--side--list">
+                Connect primary Google Calendar account
+              </li>
+              <li class="section4__card-item--side--list">
+                Add due dates, reminders, and notifications to your tasks
+              </li>
+            </ul>
             <a href="#" class="section4__card-item--side--button"
-              >Get Started</a
-            >
+              >Get Started
+            </a>
           </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- SECTION 5 YOUR WORK -->
+    <section class="section5__container container">
+      <img
+        src="./acssets/img/img_section5_background.png"
+        alt="#"
+        class="section5__img"
+      />
+      <div class="section5__data">
+        <h3 class="section5__title title">
+          Your work, everywhere you are
+          <img
+            src="./acssets/img/img_section5_element.png"
+            alt="#"
+            class="section5__img-title"
+          />
+        </h3>
+        <p class="section5__content content">
+          Access your notes from your computer, phone or tablet by synchronising
+          with various services, including whitepace, Dropbox and OneDrive. The
+          app is available on Windows, macOS, Linux, Android and iOS. A terminal
+          app is also available!
+        </p>
+        <a href="#" class="section5__button button"
+          >Try Taskey
+          <i class="fa-solid fa-arrow-right"></i>
+        </a>
+      </div>
+    </section>
+
+    <!-- SECTION 6 YOUR DATA -->
+    <section class="section6__container container" id="section6">
+      <div class="section6__top">
+        <div class="section6__data">
+          <h3 class="section6__title title">
+            100% your data
+            <img
+              src="./acssets/img/img_section6_top_element.png"
+              alt="#"
+              class="section6__top-img--title"
+            />
+          </h3>
+          <p class="section6__content content">
+            The app is open source and your notes are saved to an open format,
+            so you'll always have access to them. Uses End-To-End Encryption
+            (E2EE) to secure your notes and ensure no-one but yourself can
+            access them.
+          </p>
+          <a href="#" class="section6__button button"
+            >Read More
+            <i class="fa-solid fa-arrow-right"></i>
+          </a>
+        </div>
+        <div class="section6__top-img">
+          <img src="./acssets/img/img_section6_img.png" alt="#" />
+        </div>
+      </div>
+
+      <div class="section6__bottom">
+        <h3 class="section6__title title">
+          Our sponsors
+          <img
+            src="./acssets/img/img_section6_bottom_element.png
+          "
+            alt=""
+            class="section6__bottom-img--title"
+          />
+        </h3>
+        <div class="section6__bottom-img">
+          <img
+            src="./acssets/img/img_section6_bottom_apple.png"
+            alt="#"
+            class="section6__bottom-img--apple"
+          />
+          <img
+            src="./acssets/img/img_section6_bottom_microsoft.png"
+            alt="#"
+            class="section6__bottom-img--microsoft"
+          />
+          <img
+            src="./acssets/img/img_section6_bottom_slack.png"
+            alt="#"
+            class="section6__bottom-img--slack"
+          />
+          <img
+            src="./acssets/img/img_section6_bottom_google.png"
+            alt="#"
+            class="section6__bottom-img--google"
+          />
         </div>
       </div>
     </section>
